# RAG-ing

./: .dockerignore  .env.example  .gitignore  BUILD_GUIDE.md  CODE-LEVEL-GAP-ANALYSIS.md  CONFIGURATION_FIXES_SUMMARY.md  DEPLOYMENT_SETUP_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  GAP-ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PACKAGE_ANALYSIS_SUMMARY.md  PACKAGE_STATUS_REPORT.html  PACKAGE_STATUS_REPORT.md  QA-DEFECTS-LOG.md  QUICKSTART_LOCAL_EMBEDDINGS.md  RAG_PROCESS_FLOW.drawio  README.md  README.md.backup  analyze_packages.py  check_packages.sh  config.yaml  config.yaml.backup  config.yaml.bak  demo.py  demo_enhancements.py  developer_guide.md  docker-compose.minimal.yml  docker-compose.yml  env.example  index.html  main.py  metrics_1759131861.json  pyproject.toml  requirement.md  setup.py  streamlit_app.py  test_confluence.py  test_embedding_providers.py  test_embedding_usage.py  (+2 more)
.github/: copilot-instructions.md  progress-2025-12-06.md
archived/documentation/: FINAL-STATUS-REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_VERIFICATION_REPORT.md  find_deployments.py  home_enhanced.html  iConnect_Technical_Architecture_Assessment.md  test_azure_openai.py
archived/streamlit/: README.md  streamlit_app.py
archived/streamlit/modules/: ui_layer.py
data/: customer_analytics_v1.sql  customer_analytics_v2.sql  fhir_content_fhir.html  iConnect_Application_Reference.md  sample.md  sample.txt  sql_implementation_v1.md  sql_implementation_v2.md
debug_tools/: 01_check_config.py  02_check_data_sources.py  03_check_embedding_model.py  04_check_vector_store.py  05_check_tracker_database.py  06_test_end_to_end.py  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  run_all_checks.py
docker/: README.md  deploy.sh
docs/: DBT_IMPLEMENTATION_PLAN.md  DBT_INTEGRATION_STATUS.md  DBT_MANIFEST_SQL_CODE_INVENTORY.md  DBT_PHASE_2_IMPLEMENTATION_STATUS.md  EMBEDDING_PROVIDER_IMPLEMENTATION.md  SQL_ENHANCED_HYBRID_SEARCH.md  confluence_project_config_and_env.md  sqllite_usage_help.md
docs/architecture/: 01_high_level_flow.md  02_source_to_vector_and_tracker.md  03_retrieval_and_optimization_flow.md  04_ui_personalization_and_auth_flow.md  05_system_flow_dag.md  REWRITE_SUMMARY.md
docs/confluence/: 01_high_level_architecture_and_purpose.md  02_source_to_vector_with_techniques.md  03_retrieval_techniques.md  04_ui_components.md  05_developer_manual_config_env.md  CONFLUENCE_DOCS_SUMMARY.md
prompts/: enhanced_answer_formatting.txt  general.txt  iconnect_concise.txt  iconnect_enterprise.txt  oncology.txt  query_expansion.txt  simple.txt
src/: Requirement.md  ingestion.py  rag_pipeline.py  vector_store.py
src/rag_ing/: __init__.py  chunking.py  cli.py  orchestrator.py
src/rag_ing/config/: __init__.py  settings.py
src/rag_ing/connectors/: __init__.py  azuredevops_connector.py  base.py  confluence.py  confluence_connector.py  medium.py  social_media.py
src/rag_ing/evaluation/: __init__.py  continuous_evaluation.py  ragas_integration.py
src/rag_ing/models/: __init__.py  embedding_manager.py  llm_manager.py
src/rag_ing/modules/: __init__.py  corpus_embedding.py  evaluation_logging.py  llm_orchestration.py  query_retrieval.py  ui_layer.py
src/rag_ing/retrieval/: __init__.py  hybrid_context.py  hybrid_retrieval.py  multi_query_retrieval.py  query_expansion.py  result_aggregation.py
src/rag_ing/storage/: __init__.py  vector_store.py
src/rag_ing/ui/: __init__.py  streamlit_app.py
src/rag_ing/utils/: __init__.py  activity_logger.py  code_chunker.py  dbt_artifacts.py  dbt_lineage.py  document_summarizer.py  duplicate_detector.py  embedding_provider.py  exceptions.py  ingestion_tracker_sqlite.py  temp_files.py
temp_debug/chunks/: chunks.json
temp_debug/embeddings_cache/: chunks_with_embeddings.pkl
temp_debug/sql_files/: staging_models_list.json  stg_attribution.metadata.json  stg_attribution.sql  stg_attribution_all.metadata.json  stg_attribution_all.sql  stg_avoidable_admissions.metadata.json  stg_avoidable_admissions.sql  stg_billing_provider.metadata.json  stg_billing_provider.sql  stg_cancer_type.metadata.json  stg_cancer_type.sql  stg_care_coordination_fee.metadata.json  stg_care_coordination_fee.sql  stg_claimline.metadata.json  stg_claimline.sql  stg_claimpharmacy.metadata.json  stg_claimpharmacy.sql  stg_claims.metadata.json  stg_claims.sql  stg_claims_ed_to_ip.metadata.json  stg_claims_ed_to_ip.sql  stg_client_tin_mapping.metadata.json  stg_client_tin_mapping.sql  stg_comorbidity.metadata.json  stg_comorbidity.sql  stg_comorbidtiy_diagnosis_hcc.metadata.json  stg_comorbidtiy_diagnosis_hcc.sql  stg_dates.metadata.json  stg_dates.sql  stg_discontinued_attribution.metadata.json  stg_discontinued_attribution.sql  stg_emcodes_per_attributionmonth.metadata.json  stg_emcodes_per_attributionmonth.sql  stg_eol_members.metadata.json  stg_eol_members.sql  stg_episodes.metadata.json  stg_episodes.sql  stg_hcc_mapping.metadata.json  stg_hcc_mapping.sql  stg_hospice_members.metadata.json  (+111 more)
temp_helper_codes/: AZURE_OPENAI_SETUP.md  PROMPT_ENGINEERING_ANALYSIS.md  README.md  TEMP_FILES_IMPLEMENTATION.md  example_temp_usage.py  faq1.html  faq4.html  faq5.html  get_hl7_content.py  test_rag_integration.py  test_server.py  test_ui_command.py  web_app_old.py
tests/: test_chunking.py  test_dbt_integration.py  test_enhanced_settings.py  test_structure.py
tests/poc/: faq2.html  faq3.html
ui/: README.md  __init__.py  app.py  enhanced_response.py
ui/api/: __init__.py  pages.py  progress_routes.py  routes.py  simple_progress.py
ui/static/css/: main.css  personalization.css  progress.css  transformer.css
ui/static/js/: clean_transformer.js  main.js  personalization.js  progress.js  transformer.js
ui/templates/: home.html  search_result.html  search_result_chat.html
ui/vector_store/: chroma.sqlite3
vector_store/: chroma.sqlite3
vector_store/88d81225-b5fb-437b-abbc-d9468dd299b0/: index_metadata.pickle
vector_store/c6a2454a-e063-4261-ba02-456c247bc604/: index_metadata.pickle
vector_store/summaries/: chroma.sqlite3
(+4 files in other folders)
