[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ing"
version = "0.1.0"
description = "A comprehensive RAG application with multiple connectors and dynamic model selection"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Selva kumar", email = "55345192+selva-k-r@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core LangChain ecosystem (latest stable)
    "langchain>=0.3.7",
    "langchain-community>=0.3.5",
    "langchain-openai>=0.2.8",
    "langchain-huggingface>=0.1.2",  # Required for code compatibility (won't download models when using Azure)
    
    # Web frameworks
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    
    # Snowflake integration (keeping as requested)
    "snowflake-connector-python>=3.12.3",
    "snowflake-sqlalchemy>=1.6.1",
    
    # HTTP and web scraping
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    
    # Configuration and environment
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "PyYAML>=6.0.2",
    
    # Data science and ML
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    # "sentence-transformers>=3.3.1",  # Optional: Only needed if using local HuggingFace models
    
    # AI/LLM providers
    "openai>=1.54.5",
    "anthropic>=0.39.0",
    "tiktoken>=0.8.0",
    
    # Vector stores and embeddings
    "faiss-cpu>=1.9.0",
    "chromadb>=0.5.20",
    
    # Document processing
    "pdfplumber>=0.11.4",
    "pymupdf>=1.24.14",
    "feedparser>=6.0.11",
    "markdown-it-py>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/<your-github-username>/<your-repo-name>"
Repository = "https://github.com/<your-github-username>/<your-repo-name>"

[project.scripts]
rag-ing = "rag_ing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true